Adjusted .bash_profile for typical case. Added default to .screenrc

--- a/.screenrc
+++ b/.screenrc
@@ -10,3 +10,7 @@ nethack on
 hardstatus alwayslastline 
 # blue hostname, blue pipe, cyan time, blue pipe, cyan window list (current window magenta)
 hardstatus string "%{bk}H: %H | %{ck}%c%{bk} | %{ck}%-w%{mk}%n %t%{ck}%+w "
+
+# default windows
+screen -t L 0 bash
+
