--- a/templates/docker/Dockerfile.disposable_dev
+++ b/templates/docker/Dockerfile.disposable_dev
@@ -1,8 +1,9 @@
 FROM debian:latest
 
-ENV DEBIAN_FRONTEND noninteractive
+ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update
+RUN apt-get full-upgrade -y
 RUN apt-get install -y vim build-essential gdb net-tools git python3 screen htop iperf
 
 WORKDIR /root
